--- a/dashboard.html
+++ b/dashboard.html
@@ -187,83 +187,81 @@
 
 
   <div id="fieldsSection" class="content-section">
-    <div class="section">
-      <h2 class="text-center my-4">Manage Fields</h2>
+    <h2 class="text-center my-4">Manage Fields</h2>
 
-      <!-- Add Field Button -->
-      <div class="d-flex justify-content-center mb-4">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#fieldModal">Add Field</button>
-      </div>
+    <!-- Add Field Button -->
+    <div class="d-flex justify-content-center mb-4">
+      <button id="addFieldBtn" class="btn btn-success">Add Field</button>
+    </div>
 
-      <!-- Field Table -->
-      <table class="table table-bordered" id="fieldTable">
-        <thead class="table-success">
-        <tr>
-          <th>ID</th>
-          <th>Field Name</th>
-          <th>Location</th>
-          <th>Size</th>
-          <th>Image 1</th>
-          <th>Image 2</th>
-          <th>Crop</th>
-          <th>Staff</th>
-          <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <!-- Rows will be added dynamically -->
-        </tbody>
-      </table>
+    <!-- Field Table -->
+    <table class="table table-bordered" id="fieldTable">
+      <thead class="table-success">
+      <tr>
 
-      <!-- Popup Modal for Field Details -->
-      <div class="modal fade" id="fieldModal" tabindex="-1" aria-labelledby="fieldModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="fieldModalLabel">Add Field</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form id="fieldForm">
-                <div class="mb-3">
-                  <label for="fieldName" class="form-label">Field Name</label>
-                  <input type="text" class="form-control" id="fieldName" required>
-                </div>
-                <div class="mb-3">
-                  <label for="location" class="form-label">Location</label>
-                  <input type="text" class="form-control" id="location" required>
-                </div>
-                <div class="mb-3">
-                  <label for="size" class="form-label">Size (Acres)</label>
-                  <input type="number" class="form-control" id="size" required>
-                </div>
-                <div class="mb-3">
-                  <label for="image1" class="form-label">Image 1</label>
-                  <input type="file" class="form-control" id="image1" required>
-                </div>
-                <div class="mb-3">
-                  <label for="image2" class="form-label">Image 2</label>
-                  <input type="file" class="form-control" id="image2" required>
-                </div>
-                <div class="mb-3">
-                  <label for="crop" class="form-label">Crop</label>
-                  <input type="text" class="form-control" id="crop" required>
-                </div>
-                <div class="mb-3">
-                  <label for="staff" class="form-label">Staff</label>
-                  <input type="text" class="form-control" id="staff" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Save Field</button>
-              </form>
-            </div>
+        <th>Field Code</th>
+        <th>Field Name</th>
+        <th>Location</th>
+        <th>Size (Acres)</th>
+        <th>Image 1</th>
+        <th>Image 2</th>
+        <th>Staff</th>
+        <th>Crops</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+      <!-- Rows will be added dynamically -->
+      </tbody>
+    </table>
+
+    <!-- Add/Edit Modal -->
+    <div class="modal fade" id="fieldModal" tabindex="-1" aria-labelledby="fieldModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="fieldModalLabel">Add/Edit Field</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="fieldForm">
+              <input type="hidden" id="fieldId">
+              <div class="mb-3">
+                <label for="fieldCode" class="form-label">Field Code</label>
+                <input type="text" class="form-control" id="fieldCode" required>
+              </div>
+              <div class="mb-3">
+                <label for="fieldName" class="form-label">Field Name</label>
+                <input type="text" class="form-control" id="fieldName" required>
+              </div>
+              <div class="mb-3">
+                <label for="location" class="form-label">Location</label>
+                <input type="text" class="form-control" id="location" required>
+              </div>
+              <div class="mb-3">
+                <label for="extentSize" class="form-label">Size (Acres)</label>
+                <input type="number" class="form-control" id="extentSize" required>
+              </div>
+              <div class="mb-3">
+                <label for="fieldImage1" class="form-label">Image 1</label>
+                <input type="file" class="form-control" id="fieldImage1">
+              </div>
+              <div class="mb-3">
+                <label for="fieldImage2" class="form-label">Image 2</label>
+                <input type="file" class="form-control" id="fieldImage2">
+              </div>
+              <div class="mb-3">
+                <label for="staffList" class="form-label">Staff</label>
+                <input type="text" class="form-control" id="staffList" placeholder="Comma-separated staff IDs">
+              </div>
+              <div class="mb-3">
+                <label for="cropsList" class="form-label">Crops</label>
+                <input type="text" class="form-control" id="cropsList" placeholder="Comma-separated crop IDs">
+              </div>
+              <button type="submit" class="btn btn-primary">Save</button>
+            </form>
           </div>
         </div>
-      </div>
-
-      <!-- Image Popup -->
-      <div id="fieldImagePopup">
-        <span class="close" onclick="$('#fieldImagePopup').fadeOut()">×</span>
-        <img id="popupFieldImage" alt="Popup Field Image">
       </div>
     </div>
   </div>
