--- a/dashboard.html
+++ b/dashboard.html
@@ -178,9 +178,9 @@
       </div>
 
       <!-- Image Popup -->
-      <div id="imagePopup" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); justify-content: center; align-items: center; z-index: 999;">
+      <div id="imagePopup" style="display: none; position: fixed; top: 0; left: 0;bottom: 0;right: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); justify-content: center; align-items: center; z-index: 999;">
         <span class="close" style="position: absolute; top: 10px; right: 20px; font-size: 30px; color: white; cursor: pointer;">×</span>
-        <img id="popupImage" src="" alt="Popup Image" style="max-width: 90%; max-height: 90%;">
+        <img id="popupImage" src="" alt="Popup Image" style="max-width: 50%; max-height: 50%;">
       </div>
     </div>
   </div>
@@ -265,6 +265,9 @@
       </div>
     </div>
   </div>
+
+</div>
+
 
   <div id="logsSection" class="content-section">
 
