set ajax in cropController.js

--- a/dashboard.html
+++ b/dashboard.html
@@ -126,7 +126,7 @@
       <table class="table table-bordered" id="cropTable">
         <thead class="table-success">
         <tr>
-          <th>ID</th>
+          <th>CROP Code</th>
           <th>Crop Name</th>
           <th>Season</th>
           <th>Scientific Name</th>
