set ajax in fieldController.js

--- a/dashboard.html
+++ b/dashboard.html
@@ -198,7 +198,6 @@
     <table class="table table-bordered" id="fieldTable">
       <thead class="table-success">
       <tr>
-
         <th>Field Code</th>
         <th>Field Name</th>
         <th>Location</th>
@@ -211,9 +210,10 @@
       </tr>
       </thead>
       <tbody>
-      <!-- Rows will be added dynamically -->
+      <!-- Rows populated dynamically -->
       </tbody>
     </table>
+
 
     <!-- Add/Edit Modal -->
     <div class="modal fade" id="fieldModal" tabindex="-1" aria-labelledby="fieldModalLabel" aria-hidden="true">
