--- a/dashboard.html
+++ b/dashboard.html
@@ -283,6 +283,7 @@
           <table class="table table-bordered" id="logTable">
             <thead class="table-success">
             <tr>
+              <th>Log Code</th>
               <th>Date</th>
               <th>Details</th>
               <th>Image</th>
