edited staff page

--- a/dashboard.html
+++ b/dashboard.html
@@ -84,7 +84,7 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-6 mb-2">
-              <button class="btn btn-success w-100" id="addCropBtn">Add Crop</button>
+              <button class="btn btn-success w-100"  id="addCropBtn">Add Crop</button>
             </div>
             <div class="col-md-6 mb-2">
               <button class="btn btn-success w-100" id="addFieldBtn">Add Field</button>
@@ -436,7 +436,11 @@
             <th>Date of Birth</th>
             <th>Gender</th>
             <th>Designation</th>
-            <th>Address</th>
+            <th>Address 1</th>
+            <th>Address 2</th>
+            <th>Address 3</th>
+            <th>Address 4</th>
+            <th>Address 5</th>
             <th>Contact No</th>
             <th>Email</th>
             <th>Role</th>
@@ -494,8 +498,24 @@
                       <input type="text" class="form-control" id="designation" required>
                     </div>
                     <div class="col-md-12">
-                      <label for="address" class="form-label">Address</label>
+                      <label for="address" class="form-label">Address 1</label>
                       <textarea class="form-control" id="address" rows="2" required></textarea>
+                    </div>
+                    <div class="col-md-12">
+                      <label for="address2" class="form-label">Address 2</label>
+                      <textarea class="form-control" id="address2" rows="2" required></textarea>
+                    </div>
+                    <div class="col-md-12">
+                      <label for="address3" class="form-label">Address 3</label>
+                      <textarea class="form-control" id="address3" rows="2" required></textarea>
+                    </div>
+                    <div class="col-md-12">
+                      <label for="address4" class="form-label">Address 4</label>
+                      <textarea class="form-control" id="address4" rows="2" required></textarea>
+                    </div>
+                    <div class="col-md-12">
+                      <label for="address5" class="form-label">Address 5</label>
+                      <textarea class="form-control" id="address5" rows="2" required></textarea>
                     </div>
                     <div class="col-md-6">
                       <label for="contactNo" class="form-label">Contact No</label>
