--- a/SignIn.html
+++ b/SignIn.html
@@ -19,7 +19,7 @@
             <input type="password" id="password" name="password" placeholder="Enter your password" required>
         </div>
         <a id="btn" href="dashboard.html">Sign In</a>
-        <p>Don't have an account? <a href="SignUp.html">Sign Up</a></p>
+        <p>Don't have an account? <a href="SignIn.html">Sign Up</a></p>
     </form>
 </div>
 </body>
