--- a/SignUp.html
+++ b/SignUp.html
@@ -2,11 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - Green Shadow</title>
     <link rel="stylesheet" href="css/signIn%20and%20signUp.css">
@@ -36,10 +31,9 @@
         <p>Already have an account? <a href="SignIn.html">Sign In</a></p>
     </form>
 </div>
-</body>
-</html>
 
-<body>
+
+<script src="controller/UserController.js"></script>
 
 </body>
 </html>
