--- a/SignUp.html
+++ b/SignUp.html
@@ -25,8 +25,16 @@
         </div>
         <div class="input-group">
             <label for="role">Role</label>
-            <input type="text" id="role" name="role" placeholder="Enter your role" required>
+            <select id="role" class="from-select">
+                <option value="MANAGER">MANAGER</option>
+                <option value="ADMINISTRATIVE">ADMINISTRATIVE</option>
+                <option value="SCIENTIST">SCIENTIST</option>
+
+            </select>
+
+
         </div>
+        <a href="">Foget Password?</a>
         <button type="submit" class="btn">Sign Up</button>
         <p>Already have an account? <a href="SignIn.html">Sign In</a></p>
     </form>
