--- a/dashboard.html
+++ b/dashboard.html
@@ -638,13 +638,13 @@
 
 <script src="js/lib/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="controller/dashboardController.js"></script>
-<script src="controller/cropController.js"></script>
-<script src="controller/fieldController.js"></script>
-<script src="controller/logsController.js"></script>
-<script src="controller/equipmentController.js"></script>
-<script src="controller/staffController.js"></script>
-<script src="controller/vehicleControlller.js"></script>
+<script type="module" src="controller/dashboardController.js"></script>
+<script type="module" src="controller/cropController.js"></script>
+<script type="module" src="controller/fieldController.js"></script>
+<script type="module" src="controller/logsController.js"></script>
+<script type="module" src="controller/equipmentController.js"></script>
+<script type="module" src="controller/staffController.js"></script>
+<script type="module" src="controller/vehicleControlller.js"></script>
 
 </body>
 </html>
