--- a/dashboard.html
+++ b/dashboard.html
@@ -128,6 +128,7 @@
         <tr>
           <th>CROP Code</th>
           <th>Crop Name</th>
+          <th>Category</th>
           <th>Season</th>
           <th>Scientific Name</th>
           <th>Image</th>
@@ -153,6 +154,10 @@
                 <div class="mb-3">
                   <label for="cropName" class="form-label">Crop Name</label>
                   <input type="text" class="form-control" id="cropName" required>
+                </div>
+                <div class="mb-3">
+                  <label for="category" class="form-label">Category</label>
+                  <input type="text" class="form-control" id="category" required>
                 </div>
                 <div class="mb-3">
                   <label for="Season" class="form-label">Season</label>
@@ -551,7 +556,6 @@
       </div>
 
 
-
 <div id="vehiclesSection" class="content-section">
   <div class="section">
     <h2 class="text-center my-4">Vehicle Management</h2>
@@ -618,10 +622,6 @@
               <div class="mb-3">
                 <label for="staffId" class="form-label">Staff</label>
                 <input type="text" class="form-control" id="staffId" required>
-              </div>
-              <div class="mb-3">
-                <label for="vehicleImage" class="form-label">Image</label>
-                <input type="file" class="form-control" id="vehicleImage">
               </div>
               <button type="submit" class="btn btn-primary">Save Vehicle</button>
             </form>
