--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="css/logs.css">
   <link rel="stylesheet" href="css/staff.css">
   <link rel="stylesheet" href="css/vehicle.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
 
 </head>
 <body>
@@ -635,7 +638,7 @@
 
     <div id="userSection" class="content-section">User Settings</div>
 
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="js/lib/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module" src="controller/dashboardController.js"></script>
