--- a/dashboard.html
+++ b/dashboard.html
@@ -51,6 +51,9 @@
       <a href="#userSection" class="list-group-item list-group-item-action" id="navUser">
         <img src="Asserts/icons8-user-50.png" alt="User" class="menu-icon"> User
       </a>
+      <a href="SignIn.html" class="list-group-item list-group-item-action" id="navLogOut">
+        <img src="Asserts/logout.png" alt="Logout" class="menu-icon"> Logout
+      </a>
     </div>
   </nav>
 
@@ -634,6 +637,7 @@
     </div>
   </div>
 </div>
+
 
 
     <div id="userSection" class="content-section">User Settings</div>
