equipmentController.js.saveEquipment done

--- a/dashboard.html
+++ b/dashboard.html
@@ -358,7 +358,6 @@
           </div>
 
 
-
 <div id="equipmentSection" class="content-section">
   <!-- Modal for adding/editing equipment -->
   <div class="modal fade" id="equipmentModal" tabindex="-1" aria-labelledby="equipmentModalLabel" aria-hidden="true">
@@ -380,8 +379,8 @@
                 <input type="text" class="form-control" id="equipmentType" required>
               </div>
               <div class="col-md-6">
-                <label for="status" class="form-label">Status</label>
-                <select class="form-select" id="status" required>
+                <label for="equipmentStatus" class="form-label">Status</label>
+                <select class="form-select" id="equipmentStatus" required>
                   <option value="">Select Status</option>
                   <option value="Available">Available</option>
                   <option value="Unavailable">Unavailable</option>
@@ -393,7 +392,7 @@
               </div>
               <div class="col-md-6">
                 <label for="field" class="form-label">Field</label>
-                <input type="text" class="form-control" id="field" required>
+                <input type="text" class="form-control" id="efield" required>
               </div>
             </div>
             <button type="submit" class="btn btn-primary mt-3" id="saveBtn">Save Equipment</button>
@@ -427,6 +426,7 @@
     </table>
   </div>
 </div>
+
 
 
 
