equipment,field,crop,vehicle save and get all done

--- a/dashboard.html
+++ b/dashboard.html
@@ -202,7 +202,7 @@
 
     <!-- Add Field Button -->
     <div class="d-flex justify-content-center mb-4">
-      <button id="addFieldBtn" class="btn btn-success">Add Field</button>
+      <button id="addFieldBtn" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#fieldModal">Add Field</button>
     </div>
 
     <!-- Field Table -->
