--- a/dashboard.html
+++ b/dashboard.html
@@ -48,9 +48,11 @@
       <a href="#vehiclesSection" class="list-group-item list-group-item-action" id="navVehicles">
         <img src="Asserts/icons8-vehicles-64.png" alt="Vehicles" class="menu-icon"> Vehicles
       </a>
-      <a href="#userSection" class="list-group-item list-group-item-action" id="navUser">
-        <img src="Asserts/icons8-user-50.png" alt="User" class="menu-icon"> User
-      </a>
+<!--      <a href="#userSection" class="list-group-item list-group-item-action" id="navUser">-->
+<!--        <img src="Asserts/icons8-user-50.png" alt="User" class="menu-icon"> User-->
+<!--      </a>-->
+      <br> <br> <br>
+      <br><br><br> <br>
       <a href="SignIn.html" class="list-group-item list-group-item-action" id="navLogOut">
         <img src="Asserts/logout.png" alt="Logout" class="menu-icon"> Logout
       </a>
