staff get all done

--- a/dashboard.html
+++ b/dashboard.html
@@ -433,6 +433,7 @@
     <table class="table table-bordered" id="staffTable">
       <thead class="table-success">
       <tr>
+        <th>Member Code</th>
         <th>First Name</th>
         <th>Last Name</th>
         <th>Joined Date</th>
