--- a/dashboard.html
+++ b/dashboard.html
@@ -108,19 +108,13 @@
       </div>
       <br>
 
-      <!-- Bar Chart Section -->
-      <div class="row mt-4">
-        <div class="col-md-12">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title text-center">Crop Statistics</h5>
-              <canvas id="cropChart"></canvas>
-            </div>
-          </div>
+      <div class="card m-1 cards col-md-8" style="border-radius: 8px;
+                    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1); top: 17px;left: 18px;">
+        <div class="card-body">
+          <h5 class="card-title text-center">Monthly Crops of seasons</h5>
+          <canvas id="myChart"></canvas>
         </div>
-      </div>
-    </div>
-  </div>
+        </div>
 
 
 
@@ -632,7 +626,7 @@
 
 
     <div id="userSection" class="content-section">User Settings</div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="js/lib/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
