updated css and set the ui colourful and userfriendly

--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,7 @@
       <br> <br> <br>
       <br>
       <a href="SignIn.html" class="list-group-item list-group-item-action" id="navLogOut">
-        <img src="Asserts/logout.png" alt="Logout" class="menu-icon"> Logout
+        <img src="Asserts/logout.webp" alt="Logout" class="menu-icon"> Logout
       </a>
     </div>
 
