updated home page ui

--- a/dashboard.html
+++ b/dashboard.html
@@ -117,6 +117,14 @@
           <canvas id="myChart"></canvas>
         </div>
       </div>
+
+      <div class="date-time-container">
+        <p id="date"></p>
+        <p id="time"></p>
+      </div>
+
+
+
     </div>
 
 
