--- a/dashboard.html
+++ b/dashboard.html
@@ -122,9 +122,9 @@
         <p id="date"></p>
         <p id="time"></p>
       </div>
-
-
-
+      <div id="piechart">
+        <img id="imagepie" src="Asserts/piechart.jpg" alt="image">
+      </div>
     </div>
 
 
