edited UI design

--- a/dashboard.html
+++ b/dashboard.html
@@ -76,7 +76,7 @@
         <div class="col-md-3">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Live Users</h5>
+              <h5 class="card-title">Users</h5>
               <p class="display-4" id="liveUserCount">0</p>
             </div>
           </div>
